--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ footer .row {
 }
 
 /*Start of Membership Section - joinus.html*/
-.padding {
+.padding1 {
     background-color: rgba(108, 122, 137, 1);
 
   color: white;
@@ -165,7 +165,10 @@ footer .row {
 }
 /*End of Membership Section - joinus.html*/
 
-div#map {min-height: 360px;}
+div#map {
+    min-height: 360px;
+    min-width: 360px;
+}
 
 /*Start of Enquiry Page - gyminfo.html*/
 .enquiry-heroimage {
@@ -203,32 +206,20 @@ div#map {min-height: 360px;}
   width: 100%;
 }
 
-/*Start of Facilities Section - facilities.html*/
-.heading-facilities {
-  color: #000000;
-  margin: auto;
-  text-align: center;
-  text-transform: uppercase;
-  text-decoration: underline;
-  padding-top: 10px;
+.new {
+    border-style: solid;
+    border-color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+
 }
 
-.facilities {
-  border-style: none;
-  padding: 20px;
-  padding-top: 10px;
+.display-1 {
+    font-size: 50px;
+    text-align: center;
+    color: white;
+    padding-top: 10px;
 }
-
-.facilities img {
-  height: 350px;
-  width: 100%;
-  margin-left: 10px;
-  padding-right: 5%;
+.background {
+    
+    background:rgba(251,1,46, 0.8);
 }
-
-.row-3 {
-  color: #000000;
-  padding-top: 10px;
-  padding-left: 10px;
-}
-/*End of Facilities Section - facilities.html*/
