--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,7 @@ div#map {
     color: white;
     padding-top: 10px;
 }
-.background {
+.backgroundcolor {
     
     background:rgba(251,1,46, 0.8);
 }
